[package]
name = "remnant"
version = "0.1.0"
authors = ["John Van Enk <vanenkj@gmail.com>"]

[dependencies]
tokio-proto = "0.1.1"
tokio-io = "0.1.3"
docopt = "0.8.1"
serde = "1.0"
serde_derive = "1.0"
futures = "0.1.14"
bytes = "0.4.5"
tokio-service = "0.1.0"
bincode = "0.8.0"
byteorder = "1.1.0"


[[bin]]
name = "remnant"
path = "src/main.rs"

[lib]
name = "remnant"
path = "src/lib.rs"