[package]
name = "remnant"
version = "0.1.0"
authors = ["John Van Enk <vanenkj@gmail.com>"]

[dependencies]
bincode = "0.8.0"
byteorder = "1.1.0"
bytes = "0.4.5"
docopt = "0.8.1"
env_logger = "0.4.3"
futures = "0.1.14"
log = "0.3.8"
serde = "1.0"
serde_derive = "1.0"
tokio-core = "0.1.9"
tokio-io = "0.1.3"
tokio-proto = "0.1.1"
tokio-service = "0.1.0"

[[bin]]
name = "remnant"
path = "src/main.rs"

[lib]
name = "remnant"
path = "src/lib.rs"